Helm/elasticIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic
  namespace: camunda-platform #name space of the camunda deployment
spec:
  ingressClassName: nginx
  rules:
    - host: elk-prod-txnflow.txninfra.com #Replace with new domain maped to the prod ingresscontroller
      http:
        paths:
          - backend:
              service:
                name: camunda-platform-elasticsearch #name of the elasticsearch deployed with camunda
                port:
                  number: 80
            path: /
            pathType: Prefix
